# libcbio

./: .gitignore  Makefile.am  README  configure.ac
include/libcbio/: cbio.h  types.h  visibility.h
m4/: couchbase.m4
src/: document.c  error.c  instance.c  internal.h
tests/: gtests.cc  testapp.c
